# econojax

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run-diff.sh  run.sh  train.py
algorithms/: networks.py  ppo_trainer.py
econojax/: __init__.py  econojax.py  util.py
environment/: economy.py  jax_base_env_and_wrappers.py
util/: callbacks.py  logging.py  spaces.py  util_functions.py
