[project]
name = "econojax"
version = "0.1.0"
description = "A Fast & Scalable Economic Simulation in Jax"
readme = "README.md"
authors = [
    { name = "Koen Ponse", email = "k.ponse@liacs.leidenuniv.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "jaxnasium[algs]>=0.0.23",
]

[project.scripts]
econojax = "econojax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
